--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -15,7 +15,7 @@ jobs:
       - name: Install Node
         uses: actions/setup-node@v1
         with:
-          node-version: '12.x'
+          node-version: 12
       - name: Clone Repo
         uses: actions/checkout@v2
       - name: Create new Tag
@@ -43,12 +43,27 @@ jobs:
       - name: Install Node
         uses: actions/setup-node@v1
         with:
-          node-version: '12.x'
+          node-version: 12
       - name: Clone Repo
         uses: actions/checkout@v2
       - name: Set-up CastHub CLI
         uses: casthub/cli-github-action@master
         with:
           token: ${{ secrets.CASTHUB_CLI_TOKEN }}
+      - name: Get Yarn Cache Directory
+        id: yarn-cache
+        run: |
+          echo "::set-output name=dir::$(yarn cache dir)"
+      - name: Cache Yarn Dependencies
+        uses: actions/cache@v2
+        with:
+          path: ${{ steps.yarn-cache.outputs.dir }}
+          key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-yarn-
+      - name: Install Dependencies
+        run: yarn install --frozen-lockfile
+      - name: Build
+        run: yarn build
       - name: Publish to CastHub
         run: casthub automation-card:upload -p
